--- a/front/Style.css
+++ b/front/Style.css
@@ -33,11 +33,20 @@ header {
   height: 100px;
   background-color: red;
 }
-header label {
+header .tabContainer {
+  display: inline-flex;
+  justify-content: center;
   margin-top: 10px;
-  width: 20%;
+  width: 30%;
   padding: 10px;
   background-color: blue;
+}
+header .tabContainer img {
+  display: block;
+  max-width: 40px;
+}
+header .tabContainer label {
+  align-content: flex-end;
 }
 
 .contenido {
@@ -57,7 +66,7 @@ footer #footerTop #FAQ a {
   text-decoration: none;
 }
 footer #footerTop #socialMedia {
-  justify-self: flex-end;
+  float: right;
 }
 footer #footerTop #socialMedia img {
   max-width: 50px;
