--- a/front/Style.css
+++ b/front/Style.css
@@ -1,10 +1,11 @@
 body {
+  font-family: "Sulphur Point", sans-serif;
   margin: 0px;
   padding: 0px;
 }
 
 #allContainer {
-  background-color: aqua;
+  background-color: #cbd2d9;
   margin-left: auto;
   margin-right: auto;
   top: 0px;
@@ -31,32 +32,45 @@ input:checked + .tabContent {
 header {
   flex: auto;
   height: 100px;
-  background-color: red;
-  justify-content: space-between;
+  background-color: #3d4249;
   position: fixed;
   width: 80%;
 }
+header #logo {
+  max-height: 100px;
+}
 header .tabContainer {
   display: inline-flex;
-  justify-content: center;
-  width: 30%;
+  vertical-align: top;
+  position: relative;
+  width: 20%;
   padding: 10px;
-  background-color: blue;
+  background-color: #2097ff;
+  margin: auto;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
 }
-header .tabContainer img {
-  display: block;
-  max-width: 40px;
-}
-header .tabContainer label {
-  align-content: flex-end;
+header .tabContainer:active {
+  background-color: #2097ff;
 }
 
 .contenido {
-  padding-top: 100px;
+  padding-left: 3em;
+  padding-right: 3em;
+  padding-top: 120px;
+  margin-bottom: 3em;
+  min-height: min-content;
+  justify-content: center;
+}
+.contenido img {
+  border-radius: 100px;
+  max-width: 300px;
 }
 
 footer {
-  background-color: aquamarine;
+  background-color: #3d4249;
+  color: white;
   position: relative;
   bottom: 0px;
   width: 100%;
@@ -66,6 +80,7 @@ footer #footerTop {
   display: flex;
 }
 footer #footerTop #FAQ a {
+  color: white;
   text-decoration: none;
 }
 footer #footerTop #socialMedia {
