--- a/front2/style/styles.css
+++ b/front2/style/styles.css
@@ -39,7 +39,7 @@ body {
 
 footer {
   font-size: 12px;
-  background-color: #262626;
+  background-color: #58595b;
   color: white;
   position: relative;
   bottom: 0px;
@@ -57,8 +57,8 @@ footer #footerTop #FAQ a {
   text-decoration: none;
 }
 footer #footerTop #socialMedia {
-  padding-top: 0px;
-  padding-right: 0px;
+  padding-top: 20px;
+  padding-right: 20px;
   padding-left: 10px;
 }
 footer #footerTop #socialMedia img {
