--- a/front2/style/estilo.scss
+++ b/front2/style/estilo.scss
@@ -1,11 +1,14 @@
 //colors
 $my-greyDark: #262626;
 $my-greyMid: #58595b;
+$my-blue: dodgerblue;
 //all
 body {
     font-family: "Sulphur Point", sans-serif;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .header {
@@ -16,15 +19,16 @@ body {
         max-height: 100px;
     }
     a:hover {
-        background-color: #ddd;
+        background-color: $my-greyMid;
         color: black;
     }
     a.active {
-        background-color: dodgerblue;
+        border-bottom: 10px $my-blue;
+        background-color: $my-greyMid;
         color: white;
     }
     .header-right {
-        width: max-content;
+        width: 65%;
         padding-top: 20px;
         float: right;
         a {
@@ -79,7 +83,7 @@ footer {
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 590px) {
     body {
         margin-left: 1%;
         margin-right: 1%;
