--- a/front2/style/styles.css
+++ b/front2/style/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: "Sulphur Point", sans-serif;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .header {
@@ -13,15 +15,16 @@ body {
   max-height: 100px;
 }
 .header a:hover {
-  background-color: #ddd;
+  background-color: #58595b;
   color: black;
 }
 .header a.active {
-  background-color: dodgerblue;
+  border-bottom: 10px dodgerblue;
+  background-color: #58595b;
   color: white;
 }
 .header .header-right {
-  width: max-content;
+  width: 65%;
   padding-top: 20px;
   float: right;
 }
@@ -70,7 +73,7 @@ footer #footerBot {
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 590px) {
   body {
     margin-left: 1%;
     margin-right: 1%;
