--- a/front2/style/estilo.scss
+++ b/front2/style/estilo.scss
@@ -83,10 +83,10 @@ footer {
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 600px) {
     body {
-        margin-left: 1%;
-        margin-right: 1%;
+        margin-left: 0%;
+        margin-right: 0%;
     }
     .header a {
         float: none;
@@ -115,6 +115,24 @@ footer {
                     max-width: 50px;
                 }
             }
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .header {
+        img {
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+        .header-right {
+            float: none;
+            margin: none;
+            padding: none;
+            display: block;
+            padding-top: none;
+            width: 100%;
         }
     }
 }
