--- a/front2/style/estilo.scss
+++ b/front2/style/estilo.scss
@@ -45,6 +45,17 @@ body {
     }
 }
 
+section {
+    display: flex;
+    img {
+        padding-top: 30px;
+        max-width: 400px;
+    }
+    .texto {
+        padding: 20px;
+    }
+}
+
 //Footer
 footer {
     font-size: 12px;
@@ -83,6 +94,15 @@ footer {
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 
+@media screen and (max-width: 900px) {
+    section {
+        display: block;
+        img {
+            margin-left: 25%;
+        }
+    }
+}
+
 @media screen and (max-width: 600px) {
     body {
         margin-left: 0%;
@@ -96,6 +116,17 @@ footer {
     .header-right {
         float: none;
         margin: none;
+    }
+    section {
+        margin: none;
+        display: block;
+        img {
+            padding-top: 5px;
+            max-width: 200px;
+        }
+        .texto {
+            padding: 5px;
+        }
     }
     footer {
         #footerTop {
