--- a/front2/style/styles.css
+++ b/front2/style/styles.css
@@ -40,6 +40,17 @@ body {
   max-width: 20%;
 }
 
+section {
+  display: flex;
+}
+section img {
+  padding-top: 30px;
+  max-width: 400px;
+}
+section .texto {
+  padding: 20px;
+}
+
 footer {
   font-size: 12px;
   background-color: #58595b;
@@ -73,6 +84,14 @@ footer #footerBot {
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 900px) {
+  section {
+    display: block;
+  }
+  section img {
+    margin-left: 25%;
+  }
+}
 @media screen and (max-width: 600px) {
   body {
     margin-left: 0%;
@@ -88,6 +107,18 @@ footer #footerBot {
   .header-right {
     float: none;
     margin: none;
+  }
+
+  section {
+    margin: none;
+    display: block;
+  }
+  section img {
+    padding-top: 5px;
+    max-width: 200px;
+  }
+  section .texto {
+    padding: 5px;
   }
 
   footer #footerTop {
