--- a/front2/style/estilo.scss
+++ b/front2/style/estilo.scss
@@ -59,7 +59,7 @@ section {
 //Footer
 footer {
     font-size: 12px;
-    background-color: $my-greyMid;
+    background-color: $my-greyDark;
     color: white;
     position: relative;
     bottom: 0px;
