--- a/front2/style/styles.css
+++ b/front2/style/styles.css
@@ -53,7 +53,7 @@ section .texto {
 
 footer {
   font-size: 12px;
-  background-color: #58595b;
+  background-color: #262626;
   color: white;
   position: relative;
   bottom: 0px;
