--- a/front2/style/styles.css
+++ b/front2/style/styles.css
@@ -89,6 +89,9 @@ table {
   border-collapse: collapse;
   color: white;
   table-layout: fixed;
+  -webkit-box-shadow: 12px 10px 18px -4px rgba(0,0,0,0.39);
+-moz-box-shadow: 12px 10px 18px -4px rgba(0,0,0,0.39);
+box-shadow: 12px 10px 18px -4px rgba(0,0,0,0.39);
 }
 
 th {
@@ -113,6 +116,12 @@ tr:nth-child(odd) {
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 975px) {
+  table {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 900px) {
   section {
     display: block;
@@ -121,6 +130,14 @@ tr:nth-child(odd) {
     margin-left: 25%;
   }
 }
+
+@media screen and (max-width: 700px) {
+  table {
+    display: block;
+    overflow-x: auto;
+  }
+}
+
 @media screen and (max-width: 600px) {
   body {
     margin-left: 0%;
