--- a/front2/style/estilo.scss
+++ b/front2/style/estilo.scss
@@ -100,6 +100,9 @@ footer {
         img {
             margin-left: 25%;
         }
+        .text {
+            font-size: 0.9em;
+        }
     }
 }
 
@@ -125,7 +128,8 @@ footer {
             max-width: 200px;
         }
         .texto {
-            padding: 5px;
+            padding: 10px;
+            font-size: 0.8em;
         }
     }
     footer {
