--- a/front2/style/styles.css
+++ b/front2/style/styles.css
@@ -6,6 +6,18 @@ body {
   margin-bottom: 0px;
 }
 
+.grid-container {
+  position: relative;
+  width: 80%;
+  display: grid;
+  padding: 10px;
+}
+.grid-item {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
 .header {
   overflow: hidden;
   background-color: #262626;
